# AIAgents3997-HW9

./: .env.example  .git-workflow-state.json  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: agent-documentor.md  agent-orchestrator.md  agent-template-contract.md  architecture-author.md  building-block-reviewer.md  config-security-baseline.md  continuous-dev-orchestrator.md  cost-analyzer.md  docs-deduplicator.md  edge-case-defender.md  expected-results-recorder.md  extensibility-planner.md  final-checklist-gate.md  git-workflow.md  implementer.md  parallelism-advisor.md  prd-author.md  prompt-log-initializer.md  prompt-log-updater.md  python-env-setup.md  python-packager.md  quality-commenter.md  quality-standard-mapper.md  readme-author.md  readme-updater.md  repo-scaffolder.md  research-agent.md  results-notebook.md  sensitivity-analysis.md  ui-documentor.md  unit-test-writer.md  ux-heuristics-reviewer.md  visualization-curator.md
.github/workflows/: ci.yml
config/: settings.yaml
docs/: Architecture.md  BUDGET.md  BUILDING_BLOCKS_REVIEW.md  CONFIG.md  CONTRIBUTING.md  COSTS.md  EXPECTED_RESULTS.md  EXTENSIBILITY.md  FINAL_CHECKLIST.md  PRD.md  PROMPTS.md  QUALITY_STANDARD.md  RESEARCH.md  SECURITY.md  UI.md
docs/ADRs/: ADR-000-template.md  ADR-001-efficientnet-detection.md  ADR-002-mtcnn-face-detection.md  ADR-003-frame-sampling-strategy.md
docs/development/: FINAL_CHECKLIST.md  PROMPT_LOG.md
research/: RESEARCH.md  literature.md
research/experiments/: exp1_vit_detector.py  exp2_clip_detector.py  generate_figures.py
research/results/: exp1_results_20260112_161422.json  exp2_results_20260112_162943.json
src/: __init__.py
src/deepfake_detector/: __init__.py  cli.py
src/deepfake_detector/analyzers/: __init__.py  face_analyzer.py  video_analyzer.py
src/deepfake_detector/models/: __init__.py  detector.py
src/deepfake_detector/utils/: __init__.py  config.py  logging_config.py  validators.py
tests/: __init__.py
tests/unit/: test_config.py  test_validators.py
